pgbconsole (current development) unstable; urgency=low

  * fix segfault when close logfile screen and switch to another console where
    logfile screen still opened.

pgbconsole (0.1-1) unstable; urgency=low

  * Initial release.
  * Add admin commands (PAUSE/RESUME/RELOAD/...).
  * Add switch between modes (SHOW POOLS/CLIENTS/SERVERS/...).
  * Allow add new connections and close existing.
  * Read conninfo from input parameters or from .pgbrc file.
  * Show log file content for local pgbouncers.
  * 'SHOW CONFIG' support.
  * Edit config for local pgbouncers.
  * Add color and refresh interval change.

 -- Alexey Lesovsky <lesovsky@gmail.com>  Sun, 24 May 2015 22:37:07 +0500
